--- a/sound.html
+++ b/sound.html
@@ -6,29 +6,149 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .column-s {
+            display: inline-grid;
+            width: auto;
+            padding: 0 5px;
+        }
+    </style>
 </head>
 
 <body>
-    <h3>Vỗ tay dài tiêu chuẩn</h3>
-    <audio controls>
-        <source src="clap-01.wav" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
-    <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 01</h3>
-    <audio controls>
-        <source src="long2.mp3" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
-    <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 02</h3>
-    <audio controls>
-        <source src="long3.mp3" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
-    <h3>Cổ vũ có tên - 01</h3>
-    <audio controls>
-        <source src="cheering.mp3" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
+    <div class="column-s">
+        <h2>Vỗ tay</h2>
+        <h3>Vỗ tay dài tiêu chuẩn</h3>
+        <audio controls>
+            <source src="clap-01.wav" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 01</h3>
+        <audio controls>
+            <source src="long2.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 02</h3>
+        <audio controls>
+            <source src="long3.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Cổ vũ có tên - 01</h3>
+        <audio controls>
+            <source src="cheering.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+    <div class="column-s">
+        <h2>Nhạc EDM</h2>
+        <h3>Trái tim kim cang - Alan Người đi bộ</h3>
+        <audio controls>
+            <source src="DiamondHeartAlanDibo.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Mưa cả đêm - Alan Người đi bộ</h3>
+        <audio controls>
+            <source src="AllNightAlanDibo.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Vở kịch của em - K-391 ft. Alan Người đi bộ</h3>
+        <audio controls>
+            <source src="PlayK391AlanDibo.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>EDM Ander Nilsen</h3>
+        <audio controls>
+            <source src="EDMAnderNilsen.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Làm thế nào để độc thân - Rita Ora</h3>
+        <audio controls>
+            <source src="HowTobeLonelyRitaOra.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Mùa hè cuối cùng - Máy móc Tokyo</h3>
+        <audio controls>
+            <source src="LastSummerTokyoMachine.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Thời tới rồi - Martin Garrix </h3>
+        <audio controls>
+            <source src="ThRTheTimeMartiGarrix.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Ru con - R3hab</h3>
+        <audio controls>
+            <source src="LullaBy R3hab.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Không ổn tí nào - Kygo</h3>
+        <audio controls>
+            <source src="NotOKKygo.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Chơi nó thiệt ngầu - Steve Aoiki</h3>
+        <audio controls>
+            <source src="PlayItCoolSteveAoiki.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        
+        <h3>Đừng đầu tư vào tôi - Steve Aoki</h3>
+        <audio controls>
+            <source src="WasteItOnMeSteveAoki.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Believer Tiesto</h3>
+        <audio controls>
+            <source src="BelieverTiesto.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Burn Out Martin Garrix</h3>
+        <audio controls>
+            <source src="BurnOutMartinGarrix.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+    <div class="column-s">
+        <h2>Tik Tok</h2>
+        <h2>Coming Soon</h2>
+    </div>
+    <div class="column-s">
+        <h2>Classic</h2>
+        <h2>Coming Soon</h2>
+    </div>
+    <div class="column-s">
+        <h2>Me me</h2>
+        <h3>Trời ơi cái quần què gì vậy</h3>
+        <audio controls>
+            <source src="Troioicaiquanquegidaypa.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Trời ơi bão táp mưa giông</h3>
+        <audio controls>
+            <source src="TroiOiBaoTap.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Tham lam</h3>
+        <audio controls>
+            <source src="thamlam.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Còn cái nịt</h3>
+        <audio controls>
+            <source src="conCaiNit.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Tham lam</h3>
+        <audio controls>
+            <source src="thamlam.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        <h3>Ối dồi ôi - Huấn Rô Sì</h3>
+        <audio controls>
+            <source src="BurnOutMartinGarrix.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
 </body>
 
 </html>
