--- a/sound.html
+++ b/sound.html
@@ -23,11 +23,24 @@
             <source src="clap-01.wav" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
+        <h3>Vỗ tay dài thử hàng</h3>
+        <audio controls>
+            <source src="clap-01.wav" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        --------
         <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 01</h3>
         <audio controls>
             <source src="long2.mp3" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
+        
+        <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 01</h3>
+        <audio controls>
+            <source src="long2.mp3" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+        
         <h3>Vỗ tay dài tiêu chuẩn kèm hú hét nhỏ - 02</h3>
         <audio controls>
             <source src="long3.mp3" type="audio/ogg">
